--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,20 @@ img {
 /* hero */
 
 .hero {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("/images/background\ img.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+
   text-align: center;
 
   background-color: var(--header-footer-background-color);
@@ -234,6 +248,9 @@ img {
 }
 
 .team-list .item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+
   background-color: var(--primary-background-color);
 }
 
