--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ img {
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("/images/background\ img.jpg");
+    url("/images/background\img.jpg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
@@ -219,6 +219,34 @@ img {
 
 .section .desc {
   color: var(--secondary-text-color);
+}
+
+.features-list > .item::before {
+  display: block;
+  content: "";
+  height: 120px;
+  /* background-image: url(/images/group.svg);
+  background-size: contain; */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: var(--secondary-background-color);
+  margin-bottom: 30px;
+}
+
+.icon-group::before {
+  background-image: url(/images/group.svg);
+}
+
+.icon-clock::before {
+  background-image: url(/images/clock.svg);
+}
+
+.icon-diagram::before {
+  background-image: url(/images/diagram.svg);
+}
+
+.icon-astronaut::before {
+  background-image: url(/images/astronaut.svg);
 }
 
 /* specialization */
