--- a/css/styles.css
+++ b/css/styles.css
@@ -225,15 +225,13 @@ img {
   display: block;
   content: "";
   height: 120px;
-  /* background-image: url(/images/group.svg);
-  background-size: contain; */
   background-repeat: no-repeat;
   background-position: center;
   background-color: var(--secondary-background-color);
   margin-bottom: 30px;
 }
 
-.icon-group::before {
+/* .icon-group::before {
   background-image: url(/images/group.svg);
 }
 
@@ -246,7 +244,7 @@ img {
 }
 
 .icon-astronaut::before {
-  background-image: url(/images/astronaut.svg);
+  background-image: url(/images/astronaut.svg); */
 }
 
 /* specialization */
@@ -376,6 +374,8 @@ img {
 .button-secondary:focus {
   color: var(--primary-background-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .projects-list {
@@ -389,6 +389,11 @@ img {
   /* width: calc((100% - 90px) / 3); */
   margin-right: 30px;
   margin-bottom: 30px;
+}
+
+.projects-list .item:hover,
+.projects-list .item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .projects-list .item:nth-child(3n) {
