частично сделана секция клиент

--- a/css/styles.css
+++ b/css/styles.css
@@ -342,6 +342,16 @@ img {
   cursor: pointer;
 }
 
+/* клиенты */
+
+.client-list {
+  display: flex;
+  justify-content: center;
+}
+
+
+
+
 /* Портфолио */
 
 .filter-list {
