--- a/css/styles.css
+++ b/css/styles.css
@@ -105,16 +105,19 @@ img {
 }
 
 .contacts {
-  display: flex;
   margin-left: auto;
+  padding-left: 0px;
+  display: flex;
+  align-items: center;
 }
 
 .contacts .item:not(:last-child) {
   margin-right: 50px;
 }
 
-.contacts .link {
-  display: block;
+.contacts-link {
+  display: flex;
+  text-align: center;
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -123,6 +126,17 @@ img {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+}
+
+.header-item {
+  margin-right: 10px;
+  align-items: center;
+  fill: var(--secondary-text-color);
+}
+
+.contacts-link:hover,
+.contacts-link:focus {
+  color: var(--accent-color);
 }
 
 /* logo */
@@ -221,33 +235,16 @@ img {
   color: var(--secondary-text-color);
 }
 
-.features-list > .item::before {
-  display: block;
-  content: "";
+.icon-group {
+  width: 270px;
   height: 120px;
-  background-repeat: no-repeat;
-  background-position: center;
+  display: flex;
+  /* background-repeat: no-repeat;
+  background-position: center; */
   background-color: var(--secondary-background-color);
   margin-bottom: 30px;
+  justify-content: center;
 }
-
-/* .icon-group::before {
-  background-image: url(/images/group.svg);
-}
-
-.icon-clock::before {
-  background-image: url(/images/clock.svg);
-}
-
-.icon-diagram::before {
-  background-image: url(/images/diagram.svg);
-}
-
-.icon-astronaut::before {
-  background-image: url(/images/astronaut.svg); */
-}
-
-/* specialization */
 
 .specialization {
   padding-top: 0;
@@ -310,6 +307,10 @@ img {
 }
 
 /* акцент */
+/* .header-item:hover,
+.header-item:focus {
+  fill: var(--accent-color);
+} */
 
 .link:hover,
 .link:focus {
@@ -349,9 +350,6 @@ img {
   justify-content: center;
 }
 
-
-
-
 /* Портфолио */
 
 .filter-list {
@@ -384,7 +382,8 @@ img {
 .button-secondary:focus {
   color: var(--primary-background-color);
   background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
 
@@ -403,7 +402,8 @@ img {
 
 .projects-list .item:hover,
 .projects-list .item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .projects-list .item:nth-child(3n) {
