--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ img {
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("./images/background\img.jpg");
+    url("/images/backgroundimg.jpg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
